proj2src/y.output
Grammar

    0 $accept: Program $end

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_rec

    2 ClassDecl_rec: ClassDecl
    3              | ClassDecl_rec ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum MethodDecl_z1 RBRACEnum
    6          | LBRACEnum Decls MethodDecl_z1 RBRACEnum

    7 MethodDecl_z1: /* empty */
    8              | MethodDecl_rec

    9 MethodDecl_rec: MethodDecl
   10               | MethodDecl_rec MethodDecl

   11 Decls: DECLARATIONSnum ENDDECLARATIONSnum
   12      | DECLARATIONSnum FieldDecl_rec ENDDECLARATIONSnum

   13 FieldDecl_rec: FieldDecl
   14              | FieldDecl_rec FieldDecl

   15 @1: /* empty */

   16 FieldDecl: Type @1 FieldDecl_body SEMInum

   17 Tail: VariableDeclId
   18     | VariableDeclId EQUALnum VariableInitializer

   19 FieldDecl_body: Tail
   20               | FieldDecl_body COMMAnum Tail

   21 VariableDeclId: IDnum
   22               | IDnum Bracket_rec1

   23 Bracket_rec1: LBRACnum RBRACnum
   24             | Bracket_rec1 LBRACnum RBRACnum

   25 VariableInitializer: Expression
   26                    | ArrayInitializer
   27                    | ArrayCreationExpression

   28 ArrayInitializer: LBRACEnum ArrayInitializer_body RBRACEnum

   29 ArrayInitializer_body: VariableInitializer
   30                      | ArrayInitializer_body COMMAnum VariableInitializer

   31 ArrayCreationExpression: INTnum ArrayCreationExpression_tail

   32 ArrayCreationExpression_tail: LBRACnum Expression RBRACnum
   33                             | ArrayCreationExpression_tail LBRACnum Expression RBRACnum

   34 @2: /* empty */

   35 MethodDecl: METHODnum Type @2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

   36 @3: /* empty */

   37 MethodDecl: METHODnum VOIDnum @3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

   38 FormalParameterList_z1: /* empty */
   39                       | FormalParameterList

   40 FormalParameterList: FormalParameterList_rec
   41                    | FormalParameterList SEMInum FormalParameterList_rec

   42 @4: /* empty */

   43 FormalParameterList_rec: INTnum @4 IDENTIFIER_rec

   44 @5: /* empty */

   45 FormalParameterList_rec: VALnum INTnum @5 IDENTIFIER_rec

   46 IDENTIFIER_rec: IDnum
   47               | IDENTIFIER_rec COMMAnum IDnum

   48 Block: StatementList
   49      | Decls StatementList

   50 Type: Type_front
   51     | Type_front Bracket_rec2
   52     | Type_front Bracket_rec2 DOTnum Type

   53 Type_front: IDnum
   54           | INTnum

   55 Bracket_rec2: LBRACnum RBRACnum
   56             | LBRACnum RBRACnum Bracket_rec2

   57 StatementList: LBRACEnum Statement_rec RBRACEnum

   58 Statement_rec: Statement
   59              | Statement_rec SEMInum Statement

   60 Statement: /* empty */
   61          | AssignmentStatement
   62          | MethodCallStatement
   63          | ReturnStatement
   64          | IfStatement
   65          | WhileStatement

   66 AssignmentStatement: Variable ASSGNnum Expression

   67 MethodCallStatement: Variable MethodCallStatement_tail

   68 MethodCallStatement_tail: LPARENnum Expression_rec RPARENnum
   69                         | LPARENnum RPARENnum

   70 Expression_rec: Expression
   71               | Expression COMMAnum Expression_rec

   72 ReturnStatement: RETURNnum
   73                | RETURNnum Expression

   74 IfStatement: IFnum Expression StatementList
   75            | IFnum Expression StatementList ELSEnum StatementList

   76 WhileStatement: WHILEnum Expression StatementList

   77 Expression: SimpleExpression
   78           | SimpleExpression Comp_op SimpleExpression

   79 Comp_op: LTnum
   80        | LEnum
   81        | EQnum
   82        | NEnum
   83        | GEnum
   84        | GTnum

   85 SimpleExpression: Term
   86                 | PLUSnum Term
   87                 | MINUSnum Term
   88                 | SimpleExpression PLUSnum Term
   89                 | SimpleExpression MINUSnum Term
   90                 | SimpleExpression ORnum Term

   91 Term: Factor
   92     | Term TIMESnum Factor
   93     | Term DIVIDEnum Factor
   94     | Term ANDnum Factor

   95 Factor: UnsignedConstant
   96       | Variable
   97       | MethodCallStatement
   98       | LPARENnum Expression RPARENnum
   99       | NOTnum Factor

  100 UnsignedConstant: ICONSTnum
  101                 | SCONSTnum

  102 Variable: IDnum Variable_tail

  103 Variable_tail: /* empty */
  104              | Variable_rec

  105 Variable_rec: Variable_1
  106             | Variable_1 Variable_rec

  107 Variable_1: LBRACnum Expression_rec2 RBRACnum
  108           | DOTnum IDnum

  109 Expression_rec2: Expression
  110                | Expression COMMAnum Expression_rec2


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAMnum (258) 1
IDnum (259) 1 4 21 22 35 37 46 47 53 102 108
SEMInum (260) 1 16 41 59
CLASSnum (261) 4
DECLARATIONSnum (262) 11 12
ENDDECLARATIONSnum (263) 11 12
COMMAnum (264) 20 30 47 71 110
EQUALnum (265) 18
LBRACEnum (266) 5 6 28 57
RBRACEnum (267) 5 6 28 57
LBRACnum (268) 23 24 32 33 55 56 107
RBRACnum (269) 23 24 32 33 55 56 107
LPARENnum (270) 35 37 68 69 98
RPARENnum (271) 35 37 68 69 98
VOIDnum (272) 37
INTnum (273) 31 43 45 54
METHODnum (274) 35 37
VALnum (275) 45
DOTnum (276) 52 108
ASSGNnum (277) 66
RETURNnum (278) 72 73
IFnum (279) 74 75
ELSEnum (280) 75
WHILEnum (281) 76
LTnum (282) 79
LEnum (283) 80
EQnum (284) 81
NEnum (285) 82
GEnum (286) 83
GTnum (287) 84
PLUSnum (288) 86 88
MINUSnum (289) 87 89
ORnum (290) 90
TIMESnum (291) 92
DIVIDEnum (292) 93
ANDnum (293) 94
NOTnum (294) 99
ICONSTnum (295) 100
SCONSTnum (296) 101


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDecl_rec (44)
    on left: 2 3, on right: 1 3
ClassDecl (45)
    on left: 4, on right: 2 3
ClassBody (46)
    on left: 5 6, on right: 4
MethodDecl_z1 (47)
    on left: 7 8, on right: 5 6
MethodDecl_rec (48)
    on left: 9 10, on right: 8 10
Decls (49)
    on left: 11 12, on right: 6 49
FieldDecl_rec (50)
    on left: 13 14, on right: 12 14
FieldDecl (51)
    on left: 16, on right: 13 14
@1 (52)
    on left: 15, on right: 16
Tail (53)
    on left: 17 18, on right: 19 20
FieldDecl_body (54)
    on left: 19 20, on right: 16 20
VariableDeclId (55)
    on left: 21 22, on right: 17 18
Bracket_rec1 (56)
    on left: 23 24, on right: 22 24
VariableInitializer (57)
    on left: 25 26 27, on right: 18 29 30
ArrayInitializer (58)
    on left: 28, on right: 26
ArrayInitializer_body (59)
    on left: 29 30, on right: 28 30
ArrayCreationExpression (60)
    on left: 31, on right: 27
ArrayCreationExpression_tail (61)
    on left: 32 33, on right: 31 33
MethodDecl (62)
    on left: 35 37, on right: 9 10
@2 (63)
    on left: 34, on right: 35
@3 (64)
    on left: 36, on right: 37
FormalParameterList_z1 (65)
    on left: 38 39, on right: 35 37
FormalParameterList (66)
    on left: 40 41, on right: 39 41
FormalParameterList_rec (67)
    on left: 43 45, on right: 40 41
@4 (68)
    on left: 42, on right: 43
@5 (69)
    on left: 44, on right: 45
IDENTIFIER_rec (70)
    on left: 46 47, on right: 43 45 47
Block (71)
    on left: 48 49, on right: 35 37
Type (72)
    on left: 50 51 52, on right: 16 35 52
Type_front (73)
    on left: 53 54, on right: 50 51 52
Bracket_rec2 (74)
    on left: 55 56, on right: 51 52 56
StatementList (75)
    on left: 57, on right: 48 49 74 75 76
Statement_rec (76)
    on left: 58 59, on right: 57 59
Statement (77)
    on left: 60 61 62 63 64 65, on right: 58 59
AssignmentStatement (78)
    on left: 66, on right: 61
MethodCallStatement (79)
    on left: 67, on right: 62 97
MethodCallStatement_tail (80)
    on left: 68 69, on right: 67
Expression_rec (81)
    on left: 70 71, on right: 68 71
ReturnStatement (82)
    on left: 72 73, on right: 63
IfStatement (83)
    on left: 74 75, on right: 64
WhileStatement (84)
    on left: 76, on right: 65
Expression (85)
    on left: 77 78, on right: 25 32 33 66 70 71 73 74 75 76 98 109
    110
Comp_op (86)
    on left: 79 80 81 82 83 84, on right: 78
SimpleExpression (87)
    on left: 85 86 87 88 89 90, on right: 77 78 88 89 90
Term (88)
    on left: 91 92 93 94, on right: 85 86 87 88 89 90 92 93 94
Factor (89)
    on left: 95 96 97 98 99, on right: 91 92 93 94 99
UnsignedConstant (90)
    on left: 100 101, on right: 95
Variable (91)
    on left: 102, on right: 66 67 96
Variable_tail (92)
    on left: 103 104, on right: 102
Variable_rec (93)
    on left: 105 106, on right: 104 106
Variable_1 (94)
    on left: 107 108, on right: 105 106
Expression_rec2 (95)
    on left: 109 110, on right: 107 110


state 0

    0 $accept: . Program $end

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDecl_rec

    IDnum  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDecl_rec

    SEMInum  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDecl_rec

    CLASSnum  shift, and go to state 6

    ClassDecl_rec  go to state 7
    ClassDecl      go to state 8


state 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


state 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_rec .
    3 ClassDecl_rec: ClassDecl_rec . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


state 8

    2 ClassDecl_rec: ClassDecl .

    $default  reduce using rule 2 (ClassDecl_rec)


state 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


state 10

    3 ClassDecl_rec: ClassDecl_rec ClassDecl .

    $default  reduce using rule 3 (ClassDecl_rec)


state 11

    5 ClassBody: LBRACEnum . MethodDecl_z1 RBRACEnum
    6          | LBRACEnum . Decls MethodDecl_z1 RBRACEnum

    DECLARATIONSnum  shift, and go to state 13
    METHODnum        shift, and go to state 14

    $default  reduce using rule 7 (MethodDecl_z1)

    MethodDecl_z1   go to state 15
    MethodDecl_rec  go to state 16
    Decls           go to state 17
    MethodDecl      go to state 18


state 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


state 13

   11 Decls: DECLARATIONSnum . ENDDECLARATIONSnum
   12      | DECLARATIONSnum . FieldDecl_rec ENDDECLARATIONSnum

    IDnum               shift, and go to state 19
    ENDDECLARATIONSnum  shift, and go to state 20
    INTnum              shift, and go to state 21

    FieldDecl_rec  go to state 22
    FieldDecl      go to state 23
    Type           go to state 24
    Type_front     go to state 25


state 14

   35 MethodDecl: METHODnum . Type @2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block
   37           | METHODnum . VOIDnum @3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

    IDnum    shift, and go to state 19
    VOIDnum  shift, and go to state 26
    INTnum   shift, and go to state 21

    Type        go to state 27
    Type_front  go to state 25


state 15

    5 ClassBody: LBRACEnum MethodDecl_z1 . RBRACEnum

    RBRACEnum  shift, and go to state 28


state 16

    8 MethodDecl_z1: MethodDecl_rec .
   10 MethodDecl_rec: MethodDecl_rec . MethodDecl

    METHODnum  shift, and go to state 14

    $default  reduce using rule 8 (MethodDecl_z1)

    MethodDecl  go to state 29


state 17

    6 ClassBody: LBRACEnum Decls . MethodDecl_z1 RBRACEnum

    METHODnum  shift, and go to state 14

    $default  reduce using rule 7 (MethodDecl_z1)

    MethodDecl_z1   go to state 30
    MethodDecl_rec  go to state 16
    MethodDecl      go to state 18


state 18

    9 MethodDecl_rec: MethodDecl .

    $default  reduce using rule 9 (MethodDecl_rec)


state 19

   53 Type_front: IDnum .

    $default  reduce using rule 53 (Type_front)


state 20

   11 Decls: DECLARATIONSnum ENDDECLARATIONSnum .

    $default  reduce using rule 11 (Decls)


state 21

   54 Type_front: INTnum .

    $default  reduce using rule 54 (Type_front)


state 22

   12 Decls: DECLARATIONSnum FieldDecl_rec . ENDDECLARATIONSnum
   14 FieldDecl_rec: FieldDecl_rec . FieldDecl

    IDnum               shift, and go to state 19
    ENDDECLARATIONSnum  shift, and go to state 31
    INTnum              shift, and go to state 21

    FieldDecl   go to state 32
    Type        go to state 24
    Type_front  go to state 25


state 23

   13 FieldDecl_rec: FieldDecl .

    $default  reduce using rule 13 (FieldDecl_rec)


state 24

   16 FieldDecl: Type . @1 FieldDecl_body SEMInum

    $default  reduce using rule 15 (@1)

    @1  go to state 33


state 25

   50 Type: Type_front .
   51     | Type_front . Bracket_rec2
   52     | Type_front . Bracket_rec2 DOTnum Type

    LBRACnum  shift, and go to state 34

    $default  reduce using rule 50 (Type)

    Bracket_rec2  go to state 35


state 26

   37 MethodDecl: METHODnum VOIDnum . @3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

    $default  reduce using rule 36 (@3)

    @3  go to state 36


state 27

   35 MethodDecl: METHODnum Type . @2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

    $default  reduce using rule 34 (@2)

    @2  go to state 37


state 28

    5 ClassBody: LBRACEnum MethodDecl_z1 RBRACEnum .

    $default  reduce using rule 5 (ClassBody)


state 29

   10 MethodDecl_rec: MethodDecl_rec MethodDecl .

    $default  reduce using rule 10 (MethodDecl_rec)


state 30

    6 ClassBody: LBRACEnum Decls MethodDecl_z1 . RBRACEnum

    RBRACEnum  shift, and go to state 38


state 31

   12 Decls: DECLARATIONSnum FieldDecl_rec ENDDECLARATIONSnum .

    $default  reduce using rule 12 (Decls)


state 32

   14 FieldDecl_rec: FieldDecl_rec FieldDecl .

    $default  reduce using rule 14 (FieldDecl_rec)


state 33

   16 FieldDecl: Type @1 . FieldDecl_body SEMInum

    IDnum  shift, and go to state 39

    Tail            go to state 40
    FieldDecl_body  go to state 41
    VariableDeclId  go to state 42


state 34

   55 Bracket_rec2: LBRACnum . RBRACnum
   56             | LBRACnum . RBRACnum Bracket_rec2

    RBRACnum  shift, and go to state 43


state 35

   51 Type: Type_front Bracket_rec2 .
   52     | Type_front Bracket_rec2 . DOTnum Type

    DOTnum  shift, and go to state 44

    $default  reduce using rule 51 (Type)


state 36

   37 MethodDecl: METHODnum VOIDnum @3 . IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

    IDnum  shift, and go to state 45


state 37

   35 MethodDecl: METHODnum Type @2 . IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

    IDnum  shift, and go to state 46


state 38

    6 ClassBody: LBRACEnum Decls MethodDecl_z1 RBRACEnum .

    $default  reduce using rule 6 (ClassBody)


state 39

   21 VariableDeclId: IDnum .
   22               | IDnum . Bracket_rec1

    LBRACnum  shift, and go to state 47

    $default  reduce using rule 21 (VariableDeclId)

    Bracket_rec1  go to state 48


state 40

   19 FieldDecl_body: Tail .

    $default  reduce using rule 19 (FieldDecl_body)


state 41

   16 FieldDecl: Type @1 FieldDecl_body . SEMInum
   20 FieldDecl_body: FieldDecl_body . COMMAnum Tail

    SEMInum   shift, and go to state 49
    COMMAnum  shift, and go to state 50


state 42

   17 Tail: VariableDeclId .
   18     | VariableDeclId . EQUALnum VariableInitializer

    EQUALnum  shift, and go to state 51

    $default  reduce using rule 17 (Tail)


state 43

   55 Bracket_rec2: LBRACnum RBRACnum .
   56             | LBRACnum RBRACnum . Bracket_rec2

    LBRACnum  shift, and go to state 34

    $default  reduce using rule 55 (Bracket_rec2)

    Bracket_rec2  go to state 52


state 44

   52 Type: Type_front Bracket_rec2 DOTnum . Type

    IDnum   shift, and go to state 19
    INTnum  shift, and go to state 21

    Type        go to state 53
    Type_front  go to state 25


state 45

   37 MethodDecl: METHODnum VOIDnum @3 IDnum . LPARENnum FormalParameterList_z1 RPARENnum Block

    LPARENnum  shift, and go to state 54


state 46

   35 MethodDecl: METHODnum Type @2 IDnum . LPARENnum FormalParameterList_z1 RPARENnum Block

    LPARENnum  shift, and go to state 55


state 47

   23 Bracket_rec1: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 56


state 48

   22 VariableDeclId: IDnum Bracket_rec1 .
   24 Bracket_rec1: Bracket_rec1 . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 57

    $default  reduce using rule 22 (VariableDeclId)


state 49

   16 FieldDecl: Type @1 FieldDecl_body SEMInum .

    $default  reduce using rule 16 (FieldDecl)


state 50

   20 FieldDecl_body: FieldDecl_body COMMAnum . Tail

    IDnum  shift, and go to state 39

    Tail            go to state 58
    VariableDeclId  go to state 42


state 51

   18 Tail: VariableDeclId EQUALnum . VariableInitializer

    IDnum      shift, and go to state 59
    LBRACEnum  shift, and go to state 60
    LPARENnum  shift, and go to state 61
    INTnum     shift, and go to state 62
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 68
    ArrayInitializer         go to state 69
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    SimpleExpression         go to state 73
    Term                     go to state 74
    Factor                   go to state 75
    UnsignedConstant         go to state 76
    Variable                 go to state 77


state 52

   56 Bracket_rec2: LBRACnum RBRACnum Bracket_rec2 .

    $default  reduce using rule 56 (Bracket_rec2)


state 53

   52 Type: Type_front Bracket_rec2 DOTnum Type .

    $default  reduce using rule 52 (Type)


state 54

   37 MethodDecl: METHODnum VOIDnum @3 IDnum LPARENnum . FormalParameterList_z1 RPARENnum Block

    INTnum  shift, and go to state 78
    VALnum  shift, and go to state 79

    $default  reduce using rule 38 (FormalParameterList_z1)

    FormalParameterList_z1   go to state 80
    FormalParameterList      go to state 81
    FormalParameterList_rec  go to state 82


state 55

   35 MethodDecl: METHODnum Type @2 IDnum LPARENnum . FormalParameterList_z1 RPARENnum Block

    INTnum  shift, and go to state 78
    VALnum  shift, and go to state 79

    $default  reduce using rule 38 (FormalParameterList_z1)

    FormalParameterList_z1   go to state 83
    FormalParameterList      go to state 81
    FormalParameterList_rec  go to state 82


state 56

   23 Bracket_rec1: LBRACnum RBRACnum .

    $default  reduce using rule 23 (Bracket_rec1)


state 57

   24 Bracket_rec1: Bracket_rec1 LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 84


state 58

   20 FieldDecl_body: FieldDecl_body COMMAnum Tail .

    $default  reduce using rule 20 (FieldDecl_body)


state 59

  102 Variable: IDnum . Variable_tail

    LBRACnum  shift, and go to state 85
    DOTnum    shift, and go to state 86

    $default  reduce using rule 103 (Variable_tail)

    Variable_tail  go to state 87
    Variable_rec   go to state 88
    Variable_1     go to state 89


state 60

   28 ArrayInitializer: LBRACEnum . ArrayInitializer_body RBRACEnum

    IDnum      shift, and go to state 59
    LBRACEnum  shift, and go to state 60
    LPARENnum  shift, and go to state 61
    INTnum     shift, and go to state 62
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 90
    ArrayInitializer         go to state 69
    ArrayInitializer_body    go to state 91
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    SimpleExpression         go to state 73
    Term                     go to state 74
    Factor                   go to state 75
    UnsignedConstant         go to state 76
    Variable                 go to state 77


state 61

   98 Factor: LPARENnum . Expression RPARENnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Expression           go to state 92
    SimpleExpression     go to state 73
    Term                 go to state 74
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 62

   31 ArrayCreationExpression: INTnum . ArrayCreationExpression_tail

    LBRACnum  shift, and go to state 93

    ArrayCreationExpression_tail  go to state 94


state 63

   86 SimpleExpression: PLUSnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Term                 go to state 95
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 64

   87 SimpleExpression: MINUSnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Term                 go to state 96
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 65

   99 Factor: NOTnum . Factor

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 97
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 66

  100 UnsignedConstant: ICONSTnum .

    $default  reduce using rule 100 (UnsignedConstant)


state 67

  101 UnsignedConstant: SCONSTnum .

    $default  reduce using rule 101 (UnsignedConstant)


state 68

   18 Tail: VariableDeclId EQUALnum VariableInitializer .

    $default  reduce using rule 18 (Tail)


state 69

   26 VariableInitializer: ArrayInitializer .

    $default  reduce using rule 26 (VariableInitializer)


state 70

   27 VariableInitializer: ArrayCreationExpression .

    $default  reduce using rule 27 (VariableInitializer)


state 71

   97 Factor: MethodCallStatement .

    $default  reduce using rule 97 (Factor)


state 72

   25 VariableInitializer: Expression .

    $default  reduce using rule 25 (VariableInitializer)


state 73

   77 Expression: SimpleExpression .
   78           | SimpleExpression . Comp_op SimpleExpression
   88 SimpleExpression: SimpleExpression . PLUSnum Term
   89                 | SimpleExpression . MINUSnum Term
   90                 | SimpleExpression . ORnum Term

    LTnum     shift, and go to state 98
    LEnum     shift, and go to state 99
    EQnum     shift, and go to state 100
    NEnum     shift, and go to state 101
    GEnum     shift, and go to state 102
    GTnum     shift, and go to state 103
    PLUSnum   shift, and go to state 104
    MINUSnum  shift, and go to state 105
    ORnum     shift, and go to state 106

    $default  reduce using rule 77 (Expression)

    Comp_op  go to state 107


state 74

   85 SimpleExpression: Term .
   92 Term: Term . TIMESnum Factor
   93     | Term . DIVIDEnum Factor
   94     | Term . ANDnum Factor

    TIMESnum   shift, and go to state 108
    DIVIDEnum  shift, and go to state 109
    ANDnum     shift, and go to state 110

    $default  reduce using rule 85 (SimpleExpression)


state 75

   91 Term: Factor .

    $default  reduce using rule 91 (Term)


state 76

   95 Factor: UnsignedConstant .

    $default  reduce using rule 95 (Factor)


state 77

   67 MethodCallStatement: Variable . MethodCallStatement_tail
   96 Factor: Variable .

    LPARENnum  shift, and go to state 111

    $default  reduce using rule 96 (Factor)

    MethodCallStatement_tail  go to state 112


state 78

   43 FormalParameterList_rec: INTnum . @4 IDENTIFIER_rec

    $default  reduce using rule 42 (@4)

    @4  go to state 113


state 79

   45 FormalParameterList_rec: VALnum . INTnum @5 IDENTIFIER_rec

    INTnum  shift, and go to state 114


state 80

   37 MethodDecl: METHODnum VOIDnum @3 IDnum LPARENnum FormalParameterList_z1 . RPARENnum Block

    RPARENnum  shift, and go to state 115


state 81

   39 FormalParameterList_z1: FormalParameterList .
   41 FormalParameterList: FormalParameterList . SEMInum FormalParameterList_rec

    SEMInum  shift, and go to state 116

    $default  reduce using rule 39 (FormalParameterList_z1)


state 82

   40 FormalParameterList: FormalParameterList_rec .

    $default  reduce using rule 40 (FormalParameterList)


state 83

   35 MethodDecl: METHODnum Type @2 IDnum LPARENnum FormalParameterList_z1 . RPARENnum Block

    RPARENnum  shift, and go to state 117


state 84

   24 Bracket_rec1: Bracket_rec1 LBRACnum RBRACnum .

    $default  reduce using rule 24 (Bracket_rec1)


state 85

  107 Variable_1: LBRACnum . Expression_rec2 RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Expression           go to state 118
    SimpleExpression     go to state 73
    Term                 go to state 74
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77
    Expression_rec2      go to state 119


state 86

  108 Variable_1: DOTnum . IDnum

    IDnum  shift, and go to state 120


state 87

  102 Variable: IDnum Variable_tail .

    $default  reduce using rule 102 (Variable)


state 88

  104 Variable_tail: Variable_rec .

    $default  reduce using rule 104 (Variable_tail)


state 89

  105 Variable_rec: Variable_1 .
  106             | Variable_1 . Variable_rec

    LBRACnum  shift, and go to state 85
    DOTnum    shift, and go to state 86

    $default  reduce using rule 105 (Variable_rec)

    Variable_rec  go to state 121
    Variable_1    go to state 89


state 90

   29 ArrayInitializer_body: VariableInitializer .

    $default  reduce using rule 29 (ArrayInitializer_body)


state 91

   28 ArrayInitializer: LBRACEnum ArrayInitializer_body . RBRACEnum
   30 ArrayInitializer_body: ArrayInitializer_body . COMMAnum VariableInitializer

    COMMAnum   shift, and go to state 122
    RBRACEnum  shift, and go to state 123


state 92

   98 Factor: LPARENnum Expression . RPARENnum

    RPARENnum  shift, and go to state 124


state 93

   32 ArrayCreationExpression_tail: LBRACnum . Expression RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Expression           go to state 125
    SimpleExpression     go to state 73
    Term                 go to state 74
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 94

   31 ArrayCreationExpression: INTnum ArrayCreationExpression_tail .
   33 ArrayCreationExpression_tail: ArrayCreationExpression_tail . LBRACnum Expression RBRACnum

    LBRACnum  shift, and go to state 126

    $default  reduce using rule 31 (ArrayCreationExpression)


state 95

   86 SimpleExpression: PLUSnum Term .
   92 Term: Term . TIMESnum Factor
   93     | Term . DIVIDEnum Factor
   94     | Term . ANDnum Factor

    TIMESnum   shift, and go to state 108
    DIVIDEnum  shift, and go to state 109
    ANDnum     shift, and go to state 110

    $default  reduce using rule 86 (SimpleExpression)


state 96

   87 SimpleExpression: MINUSnum Term .
   92 Term: Term . TIMESnum Factor
   93     | Term . DIVIDEnum Factor
   94     | Term . ANDnum Factor

    TIMESnum   shift, and go to state 108
    DIVIDEnum  shift, and go to state 109
    ANDnum     shift, and go to state 110

    $default  reduce using rule 87 (SimpleExpression)


state 97

   99 Factor: NOTnum Factor .

    $default  reduce using rule 99 (Factor)


state 98

   79 Comp_op: LTnum .

    $default  reduce using rule 79 (Comp_op)


state 99

   80 Comp_op: LEnum .

    $default  reduce using rule 80 (Comp_op)


state 100

   81 Comp_op: EQnum .

    $default  reduce using rule 81 (Comp_op)


state 101

   82 Comp_op: NEnum .

    $default  reduce using rule 82 (Comp_op)


state 102

   83 Comp_op: GEnum .

    $default  reduce using rule 83 (Comp_op)


state 103

   84 Comp_op: GTnum .

    $default  reduce using rule 84 (Comp_op)


state 104

   88 SimpleExpression: SimpleExpression PLUSnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Term                 go to state 127
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 105

   89 SimpleExpression: SimpleExpression MINUSnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Term                 go to state 128
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 106

   90 SimpleExpression: SimpleExpression ORnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Term                 go to state 129
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 107

   78 Expression: SimpleExpression Comp_op . SimpleExpression

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    PLUSnum    shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    SimpleExpression     go to state 130
    Term                 go to state 74
    Factor               go to state 75
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 108

   92 Term: Term TIMESnum . Factor

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    NOTnum     shift, and go to state 65
    ICONSTnum  shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 131
    UnsignedConstant     go to state 76
    Variable             go to state 77


state 109

   93 Term: Term DIVIDEnum . Factor
